<resources>
    <string name="app_name">Expense Manager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trip">Trip</string>
    <string name="search">Search</string>
    <string name="upload">Upload</string>
    <string name="all_trip">All Trips</string>
    <string name="home">Home</string>
    <string name="name">Name</string>
    <string name="name_of_the_trip">Name of the trip</string>
    <string name="destination">Destination</string>
    <string name="date_of_trip">Date of the Trip</string>
    <string name="date">dd/mm/yyyy</string>
    <string name="required_risk">Require Risks Assessment</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="description">Description</string>
    <string name="add_to_database">Add to Database</string>
    <string name="summer_vacation">Summer Vacation</string>
    <string name="da_nang">Da Nang</string>
    <string name="title_activity_edit">EditActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="see_all_expenses">See all Expenses</string>
    <string name="edit">Edit</string>
    <string name="edit_trip">Edit Trip</string>
    <string name="expense_detail">Expense Detail</string>
    <string name="travel">Travel</string>
    <string name="add_expense">Add Expense</string>
    <string name="type">Type</string>
    <string name="choose">Choose</string>
    <string name="amount">Amount</string>
    <string name="amount_number">100.000</string>
    <string name="time_of_expense">Time of Expense</string>
    <string name="add">Add</string>
    <string name="result">Result</string>
    <string-array name="type_expense">
        <item>Travel</item>
        <item>Food</item>
        <item>Transport</item>
        <item>Other</item>
    </string-array>
</resources>