<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".view.AddExpense">
    <androidx.appcompat.widget.Toolbar
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <ImageView
            android:id="@+id/ivBack"
            android:src="@drawable/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_gravity="center"
            android:text="@string/add_expense"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginLeft="2dp"
            android:textColor="@color/red"
            android:text="*"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <com.skydoves.powerspinner.PowerSpinnerView
        android:id="@+id/powerSpinner"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_type_expense"
        android:gravity="left"
        android:hint="@string/choose"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="14.5sp"
        app:spinner_arrow_gravity="end"
        app:spinner_arrow_padding="8dp"
        app:spinner_divider_color="@color/white"
        app:spinner_divider_show="true"
        app:spinner_divider_size="0.7dp"
        app:spinner_item_array="@array/type_expense"
        app:spinner_item_height="46dp"
        app:spinner_popup_animation="dropdown"
        app:spinner_popup_elevation="14dp" />
    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginLeft="2dp"
            android:textColor="@color/red"
            android:text="*"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <EditText
        android:id="@+id/edtAmount"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_edittext"
        android:inputType="number"
        android:hint="@string/amount_number"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    <LinearLayout
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/time_of_expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginLeft="2dp"
            android:textColor="@color/red"
            android:text="*"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <EditText
        android:id="@+id/edtTimeOfExpense"
        android:layout_width="match_parent"
        android:background="@drawable/bg_edittext"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/date" />
    <Button
        android:id="@+id/btnAddExpense"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:layout_gravity="end"
        android:textAllCaps="false"
        android:text="@string/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>