<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/bg_item_trip"
    android:padding="10dp"
    android:layout_margin="10dp"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tvNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="1"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="37sp"/>
    <LinearLayout
        android:layout_marginRight="5dp"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvNameTrip"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:text="@string/summer_vacation"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvDestination"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:text="@string/da_nang"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvDateOfTrip"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:text="@string/date"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>